# Contract-Audit

./: .gitignore  Dockerfile  Makefile  README.ko.md  README.md  pyproject.toml  work.md
.claude/agents/: smart-contract-auditor.md
.github/workflows/: audit.yml  self-test.yml
config/: default.toml
config/llm_prompts/: explain.j2  poc_generate.j2  remediate.j2  summarize.j2  triage.j2
examples/: README.md
examples/amm-pool/: AMMPool.sol
examples/cross-chain-bridge/: CrossChainBridge.sol
examples/dao-treasury/: DAOTreasury.sol
examples/defi-protocol/: Governance.sol  IProtocol.sol  Oracle.sol  Pool.sol  Router.sol  Token.sol
examples/defi-vault/: LendingVault.sol
examples/defi-vault/interfaces/: IERC20.sol
examples/erc4626-vault/: InflatableVault.sol
examples/flash-loan-attack/: FlashLoanVault.sol
examples/gas-auction/: GasAuction.sol
examples/integer-math/: IntegerMath.sol
examples/lending-pool/: LendingPool.sol
examples/lottery-rng/: Lottery.sol
examples/merkle-airdrop/: MerkleAirdrop.sol
examples/multisig-wallet/: MultisigWallet.sol
examples/nft-auction/: NFTAuction.sol
examples/nft-marketplace/: NFTMarketplace.sol
examples/reentrancy-vault/: ReentrancyVault.sol
examples/staking-rewards/: StakingRewards.sol
examples/timelock-vault/: TimelockVault.sol
examples/token-bridge/: TokenBridge.sol
examples/unsafe-vault/: UnsafeVault.sol
examples/upgradeable-proxy/: UpgradeableVault.sol
examples/vulnerable-dex/: VulnerableDEX.sol
examples/vulnerable-token/: VulnerableToken.sol
examples/yield-farm/: YieldFarm.sol
src/contract_audit/: __init__.py
src/contract_audit/analyzers/: __init__.py  base.py
src/contract_audit/api/: __init__.py  app.py
src/contract_audit/auth/: __init__.py  anthropic_oauth.py  google_oauth.py  middleware.py  token_store.py
src/contract_audit/ci/: __init__.py  diff_filter.py  github_adapter.py
src/contract_audit/cli/: __init__.py  main.py
src/contract_audit/core/: __init__.py  cache.py  config.py  exceptions.py  models.py  pipeline.py  registry.py
src/contract_audit/detectors/: __init__.py  access_control_detector.py  base.py  bridge_detector.py  cross_contract_detector.py  erc20_detector.py  erc4626_detector.py  flash_loan_detector.py  frontrun_detector.py  gas_griefing.py  governance_detector.py  initialization_detector.py  integer_detector.py  utils.py  (+11 more)
tests/: __init__.py
tests/e2e/: test_full_audit.py
tests/integration/: test_detectors.py  test_dynamic_pipeline.py  test_llm_pipeline.py
tests/unit/: test_cache.py  test_config.py  test_context_slicer.py  test_cross_contract.py  test_detector_utils.py  test_edge_cases.py  test_foundry_analyzer.py  test_foundry_generators.py  test_invariant_extractor.py  test_llm_tasks.py  test_missing_zero_check.py  test_models.py  test_phase5_features.py  test_reporting.py  test_result_parser.py  test_scoring.py  test_symbolic_defi.py
(+77 files in other folders)
