[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contract-audit"
version = "1.0.0"
description = "AI-assisted Smart Contract Audit Engine"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Contract Audit Team" }]
keywords = ["smart-contracts", "security", "audit", "solidity", "defi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
]
dependencies = [
    "anthropic>=0.40.0",
    "google-genai>=1.0.0",
    "google-auth-oauthlib>=1.2.0",
    "keyring>=25.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "slither-analyzer>=0.10.0",
    "jinja2>=3.1.0",
    "rich>=13.0.0",
    "tomllib>=2.0.0; python_version < '3.11'",
    "httpx>=0.27.0",
    "aiofiles>=23.0.0",
    "packaging>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
symbolic = [
    "mythril>=0.24.0",
]

[project.scripts]
contract-audit = "contract_audit.cli.main:app"

[project.entry-points."contract_audit.detectors"]
proxy_detector = "contract_audit.detectors.proxy_detector:ProxyDetector"
flash_loan_detector = "contract_audit.detectors.flash_loan_detector:FlashLoanDetector"
oracle_detector = "contract_audit.detectors.oracle_detector:OracleDetector"
storage_collision = "contract_audit.detectors.storage_collision:StorageCollisionDetector"
gas_griefing = "contract_audit.detectors.gas_griefing:GasGriefingDetector"
governance_detector = "contract_audit.detectors.governance_detector:GovernanceDetector"

[project.entry-points."contract_audit.analyzers"]
ast_parser = "contract_audit.analyzers.ast_parser.analyzer:ASTAnalyzer"
slither = "contract_audit.analyzers.slither.analyzer:SlitherAnalyzer"
aderyn = "contract_audit.analyzers.aderyn.analyzer:AderynAnalyzer"

[tool.hatch.build.targets.wheel]
packages = ["src/contract_audit"]

[tool.hatch.envs.default]
dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
]

[tool.hatch.envs.default.scripts]
test = "pytest tests/ -v --cov=src/contract_audit"
lint = "ruff check src/ tests/"
fmt = "ruff format src/ tests/"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
